tests/negative/runtime/arrayget_empty_negative/input.ci
void main() {
    int[] xs = [];
    print(toString(arrayGet(xs, -1)) + "\n");
}
